<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/uName"
        android:textColor="@android:color/white"
        android:id="@+id/userNameL"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userNameLO"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/userNameL" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passL"
        android:text="@string/pass"
        android:textColor="@android:color/white"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/userNameLO" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passLO"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/passL" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:id="@+id/login2"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/passLO"/>


</android.support.constraint.ConstraintLayout>