<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    tools:context=".UserActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:src="@drawable/user_act_img"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/hos"
        android:textColor="@android:color/white"
        android:id="@+id/hosL"
        app:layout_constraintTop_toBottomOf="@id/logo"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:id="@+id/hos"
        app:layout_constraintTop_toBottomOf="@id/hosL"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:id="@+id/bL"
        android:text="@string/blood"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/hos"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/b"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/bL"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent">


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/remove"
            android:text="@string/remove"
            android:layout_weight="1"
            android:background="@color/main"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/add"
            app:layout_constraintHorizontal_chainStyle="spread"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add"
            android:text="@string/add"
            android:layout_weight="1"
            android:background="@color/main"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toRightOf="@+id/remove"
            app:layout_constraintRight_toRightOf="parent"
            />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>